[gd_scene load_steps=10 format=3 uid="uid://ba4x13miijrqd"]

[ext_resource type="Texture2D" uid="uid://bxgpccagjr38f" path="res://assets/zombie.png" id="1_n8a7n"]
[ext_resource type="Script" path="res://zombie.gd" id="1_w4utm"]
[ext_resource type="Texture2D" uid="uid://depdv7o1jpm4x" path="res://assets/1_14.png" id="2_n2r5l"]
[ext_resource type="Texture2D" uid="uid://eo4ayltsbp1s" path="res://assets/animations/zombie/image (1).png" id="2_x37bv"]
[ext_resource type="PackedScene" uid="uid://dxwulhmvoo0om" path="res://health_component.tscn" id="4_hjxy1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gtawq"]
radius = 29.3333

[sub_resource type="Animation" id="Animation_buxis"]
resource_name = "move"
length = 0.26
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(384, 72, 304, 48), Rect2(386, 72, 304, 48), Rect2(395, 72, 304, 48), Rect2(402, 72, 285, 48), Rect2(380, 72, 315, 48), Rect2(390, 72, 305.833, 48)]
}

[sub_resource type="Animation" id="Animation_nfj5t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(384, 72, 304, 48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1pt7"]
_data = {
"RESET": SubResource("Animation_nfj5t"),
"move": SubResource("Animation_buxis")
}

[node name="Zombie" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(1.5, 1.5)
collision_layer = 2
collision_mask = 19
script = ExtResource("1_w4utm")
const_move_speed = 150
attack_damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
shape = SubResource("CircleShape2D_gtawq")

[node name="Graphics" type="Node2D" parent="." groups=["Enemy"]]
position = Vector2(5, -17)

[node name="Alive" type="Sprite2D" parent="Graphics" groups=["Enemy"]]
position = Vector2(-5.66667, 10.3333)
rotation = -1.5708
scale = Vector2(1.43999, 1.45783)
texture = ExtResource("2_x37bv")
hframes = 6
region_enabled = true
region_rect = Rect2(384, 72, 304, 48)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics/Alive"]
libraries = {
"": SubResource("AnimationLibrary_w1pt7")
}
speed_scale = 0.3

[node name="Dead" type="Sprite2D" parent="Graphics" groups=["Enemy"]]
visible = false
z_index = -1
position = Vector2(0, -1)
texture = ExtResource("1_n8a7n")

[node name="114" type="Sprite2D" parent="Graphics/Dead" groups=["Enemy"]]
show_behind_parent = true
position = Vector2(1.90735e-06, 11)
scale = Vector2(3.265, 3.265)
texture = ExtResource("2_n2r5l")

[node name="RayCast2D" type="RayCast2D" parent="." groups=["Enemy"]]
target_position = Vector2(0, -59.3333)
collision_mask = 3

[node name="deadLeft" type="Timer" parent="." groups=["Enemy"]]
wait_time = 10.0

[node name="attackInt" type="Timer" parent="." groups=["Enemy"]]

[node name="healthComponent" parent="." groups=["Enemy"] instance=ExtResource("4_hjxy1")]
max_health = 40.0

[connection signal="timeout" from="deadLeft" to="." method="_on_dead_left_timeout"]
[connection signal="timeout" from="attackInt" to="." method="_on_attack_int_timeout"]
